bindings/cpp/include/zlink.h

typedef void (zlink_free_fn) (void *data_, void *hint_);
typedef struct {
    uint64_t event;
    uint64_t value;
    zlink_routing_id_t routing_id;
    char local_addr[256];
    char remote_addr[256];
} zlink_monitor_event_t;
typedef zlink_monitor_event_t zlink_socket_monitor_event_t;
typedef zlink_monitor_handler_fn zlink_socket_monitor_handler_fn;
typedef struct zlink_socket_monitor_open_options_t
{
    zlink_socket_monitor_event_mask_t events;
} zlink_socket_monitor_open_options_t;
/**
 * @brief Ignore socket monitor events while keeping a valid handler symbol.
 *
 * Pass this when you want snapshot or direct polling on the returned monitor
 * handle without automatic callback dispatch.
 */
ZLINK_EXPORT void zlink_monitor_ignore_handler (
  const zlink_monitor_event_t *event_, void *userdata_);
typedef struct zlink_monitor_snapshot_t
{
    zlink_monitor_source_kind_t source_kind;
    zlink_monitor_state_mask_t state_flags;
    zlink_monitor_snapshot_detail_mask_t detail_flags;
    uint32_t ready_count;
    uint64_t snd_pending_msgs;
    uint64_t rcv_pending_msgs;
} zlink_monitor_snapshot_t;
/**
 * @brief Open and return a socket monitor handle directly.
 * @param events_  Event bitmask.
 * @return Monitor handle, or NULL on failure.
 */
ZLINK_EXPORT void *zlink_socket_monitor_open (
  void *s_, const zlink_socket_monitor_open_options_t *options_);
ZLINK_EXPORT int zlink_socket_monitor_handler (
  void *monitor_,
  zlink_socket_monitor_handler_fn handler_,
  void *userdata_);
ZLINK_EXPORT int zlink_socket_monitor_recv (
  void *monitor_, zlink_socket_monitor_event_t *out_);
ZLINK_EXPORT int zlink_try_socket_monitor_recv (
  void *monitor_, zlink_socket_monitor_event_t *out_);
/** @brief Read the current snapshot for a socket or service monitor handle. */
ZLINK_EXPORT int zlink_monitor_snapshot (void *monitor_,
                                         zlink_monitor_snapshot_t *out_);
ZLINK_EXPORT int zlink_monitor_close (void **monitor_p_);
typedef void (*zlink_service_monitor_handler_fn) (
  const zlink_service_event_t *event_, void *userdata_);
typedef zlink_service_event_t zlink_service_monitor_event_t;
typedef struct zlink_service_monitor_open_options_t
{
    zlink_service_monitor_event_mask_t events;
} zlink_service_monitor_open_options_t;
ZLINK_EXPORT void *zlink_service_monitor_open (
  void *target_,
  const zlink_service_monitor_open_options_t *options_);
ZLINK_EXPORT int zlink_service_monitor_handler (
  void *monitor_,
  zlink_service_monitor_handler_fn handler_,
  void *userdata_);
ZLINK_EXPORT int zlink_service_monitor_recv (
  void *monitor_, zlink_service_monitor_event_t *out_);
ZLINK_EXPORT int zlink_try_service_monitor_recv (
  void *monitor_, zlink_service_monitor_event_t *out_);
/******************************************************************************/
/*  Scheduling timers                                                         */
/******************************************************************************/
typedef void (zlink_timer_fn) (int timer_id, void *arg);
typedef void (zlink_thread_fn) (void *);